2003-02-20  Corinna Vinschen  <corinna@vinschen.de>

	* wincap.h (wincap): Remove unnecessary definition of
	supports_sparse_files.
	* wincap.cc: Ditto.

2003-02-20  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Check descriptor
	created by cygheap_fdnew constructor.
	* fhandler_virtual.cc (fhandler_virtual::opendir): Ditto.
	* fhandler_socket.cc (fhandler_socket::accept): Ditto and move
	creation of file descriptor behind blocking OS call.
	* net.cc (cygwin_socket): Ditto.
	(cygwin_rcmd): Ditto.
	(cygwin_rresvport): Ditto.
	(cygwin_rexec): Ditto.
	(socketpair): Ditto.

2003-02-20  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (GetCompressedFileSize): Add.
	* fhandler_disk_file.cc (fhandler_disk_file::fstat_helper): Compute
	st_blocks value from GetCompressedFileSize() if available.

2003-02-18  Vaclav Haisman  <V.Haisman@sh.cvut.cz>

	* wincap.h (wincaps::supports_sparse_files): New flag.
	(wincapc::supports_sparse_files): New method.
	* wincap.cc (wincap_unknown): Define value for the new flag.
	(wincap_95): Ditto.
	(wincap_95osr2): Ditto.
	(wincap_98): Ditto.
	(wincap_98se): Ditto.
	(wincap_me): Ditto.
	(wincap_nt3): Ditto.
	(wincap_nt4): Ditto.
	(wincap_nt4sp4): Ditto.
	(wincap_2000): Ditto.
	(wincap_xp): Ditto.
	* path.h (path_conv::fs_flags): New method.
	* fhandler_disk_file.cc: Include winioctl.h for DeviceIoControl.   
	(fhandler_disk_file::open): Set newly created and truncated files as    
	sparse on platforms that support it.

2003-02-17  Pierre Humblet  <pierre.humblet@ieee.org>

	* grp.cc (internal_getgroups): Handle properly tokens with
	no groups. Fix bug introduced on 2003-02-04.

2003-02-16  Christopher Faylor  <cgf@redhat.com>

	* cygwin.din: Export all appropriate newlibc libm functions.  Sort.
	* include/cygwin/version.h: Bump API minor number.

2003-02-15  Christopher Faylor  <cgf@redhat.com>

	* cygwin.din: Export all appropriate newlib libc functions.